# bsp-generators

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  BUILD.bsp.bazel  README.md  WORKSPACE  jitpack.yml
bsp4rs/: BUILD  Cargo.toml  cargo-bazel-lock.json
bsp4rs/src/com/jetbrains/bsp/bsp4rs/: lib.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/bsp/: bsp_connection_details.rs  build_client_capabilities.rs  build_server_capabilities.rs  build_target.rs  build_target_capabilities.rs  build_target_data.rs  build_target_data_kind.rs  build_target_event.rs  build_target_event_data.rs  build_target_event_data_kind.rs  build_target_event_kind.rs  build_target_identifier.rs  build_target_tag.rs  clean_cache_params.rs  clean_cache_result.rs  compile_params.rs  compile_provider.rs  compile_report.rs  compile_result.rs  compile_result_data.rs  compile_result_data_kind.rs  compile_task.rs  debug_provider.rs  debug_session_address.rs  debug_session_params.rs  debug_session_params_data.rs  debug_session_params_data_kind.rs  dependency_module.rs  dependency_module_data.rs  dependency_module_data_kind.rs  dependency_modules_item.rs  dependency_modules_params.rs  dependency_modules_result.rs  dependency_sources_item.rs  dependency_sources_params.rs  dependency_sources_result.rs  diagnostic.rs  diagnostic_data.rs  diagnostic_data_kind.rs  diagnostic_related_information.rs  (+65 more)
bsp4rs/src/com/jetbrains/bsp/bsp4rs/cargo/: cargo_build_server.rs  cargo_build_target.rs  cargo_features_state_result.rs  disable_cargo_features_params.rs  edition.rs  enable_cargo_features_params.rs  feature_dependency_graph.rs  mod.rs  package_features.rs  set_cargo_features_params.rs  set_cargo_features_result.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/cpp/: cpp_build_target.rs  cpp_options_item.rs  cpp_options_params.rs  cpp_options_result.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/java/: java_build_server.rs  javac_options_item.rs  javac_options_params.rs  javac_options_result.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/jvm/: environment_variables.rs  jvm_build_target.rs  jvm_environment_item.rs  jvm_main_class.rs  jvm_run_environment_params.rs  jvm_run_environment_result.rs  jvm_test_environment_params.rs  jvm_test_environment_result.rs  mod.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/maven/: maven_dependency_module.rs  maven_dependency_module_artifact.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/python/: python_build_server.rs  python_build_target.rs  python_options_item.rs  python_options_params.rs  python_options_result.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/sbt/: sbt_build_target.rs
bsp4rs/src/com/jetbrains/bsp/bsp4rs/scala/: scala_action.rs  scala_attach_remote.rs  scala_build_server.rs  scala_build_target.rs  scala_diagnostic.rs  scala_main_class.rs  scala_main_classes_item.rs  scala_main_classes_params.rs  scala_main_classes_result.rs  scala_platform.rs  scala_test_classes_item.rs  scala_test_classes_params.rs  scala_test_classes_result.rs  scala_test_params.rs  scala_test_suite_selection.rs  scala_test_suites.rs  scala_text_edit.rs  scala_workspace_edit.rs  scalac_options_item.rs  scalac_options_params.rs  scalac_options_result.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/: lib.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/bazel/: bazel_build_server.rs  jar.rs  library_item.rs  mod.rs  workspace_libraries_result.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/bsp/: bsp_connection_details.rs  build_client.rs  build_client_capabilities.rs  build_server.rs  build_server_capabilities.rs  build_target.rs  build_target_capabilities.rs  build_target_data.rs  build_target_event.rs  build_target_event_data.rs  build_target_event_kind.rs  build_target_identifier.rs  build_target_tag.rs  clean_cache_params.rs  clean_cache_result.rs  code.rs  code_description.rs  compile_params.rs  compile_provider.rs  compile_report.rs  compile_result.rs  compile_result_data.rs  compile_task.rs  debug_provider.rs  debug_session_address.rs  debug_session_params.rs  debug_session_params_data.rs  dependency_module.rs  dependency_module_data.rs  dependency_modules_item.rs  dependency_modules_params.rs  dependency_modules_result.rs  dependency_sources_item.rs  dependency_sources_params.rs  dependency_sources_result.rs  diagnostic.rs  diagnostic_code.rs  diagnostic_data.rs  diagnostic_related_information.rs  diagnostic_severity.rs  (+62 more)
bsp4rs/src/org/jetbrains/bsp/bsp4rs/cancel/: cancel_extension.rs  cancel_request_params.rs  mod.rs  request_id.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/cargo/: cargo_build_server.rs  cargo_build_target.rs  cargo_features_state_result.rs  edition.rs  feature.rs  feature_dependency_graph.rs  mod.rs  package_features.rs  rust_edition.rs  set_cargo_features_params.rs  set_cargo_features_result.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/cpp/: cpp_build_server.rs  cpp_build_target.rs  cpp_options_item.rs  cpp_options_params.rs  cpp_options_result.rs  mod.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/java/: java_build_server.rs  javac_options_item.rs  javac_options_params.rs  javac_options_result.rs  mod.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/jvm/: environment_variables.rs  jvm_build_server.rs  jvm_build_target.rs  jvm_environment_item.rs  jvm_main_class.rs  jvm_run_environment_params.rs  jvm_run_environment_result.rs  jvm_test_environment_params.rs  jvm_test_environment_result.rs  mod.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/maven/: maven_dependency_module.rs  maven_dependency_module_artifact.rs  mod.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/python/: mod.rs  python_build_server.rs  python_build_target.rs  python_options_item.rs  python_options_params.rs  python_options_result.rs
bsp4rs/src/org/jetbrains/bsp/bsp4rs/rust/: feature.rs  feature_dependency_graph.rs  features_dependency_graph.rs  mod.rs  rust_build_server.rs  rust_build_target.rs  rust_cfg_options.rs  rust_crate_type.rs  rust_dep_kind.rs  rust_dep_kind_info.rs  rust_dependencies.rs  rust_dependency.rs  rust_edition.rs  rust_environment_variables.rs  rust_feature.rs  rust_package.rs  rust_package_origin.rs  rust_raw_dependencies.rs  rust_raw_dependency.rs  rust_target.rs  rust_target_kind.rs  (+6 more)
(+526 files in other folders)
