load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")

load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@com_github_jetbrains_kotlin//:kotlinx-serialization-compiler-plugin",
    ],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    exported_compiler_plugins = [":serialization_plugin"],
    exports = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
    visibility = ["//visibility:public"],
)


alias(
    name = "codegen",
    actual = "//codegen/src/main/kotlin/com/jetbrains/bsp/generators:codegen",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4kt-generator",
    main_class = "com.jetbrains.bsp.generators.bsp4kt.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":codegen",
    ],
)

load("//rules/generator:generator.bzl", "library_generator")

library_generator(
    name = "generate-bsp4kt",
    library_name = "bsp4kt",
    gen_tool = ":bsp4kt-generator",
    visibility = ["//visibility:public"],
)
