load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@rules_multirun//:defs.bzl", "multirun")
load("//rules/generator:generator.bzl", "library_generator")

multirun(
    name = "generate",
    commands = [
        "//:generate-bsp4kt_command",
        "//:generate-bsp4s_command",
        "//:generate-bsp4j_command",
        "//:generate-bsp4rs_command",
    ],
)

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@com_github_jetbrains_kotlin//:kotlinx-serialization-compiler-plugin",
    ],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    exported_compiler_plugins = [":serialization_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)

alias(
    name = "codegen",
    actual = "//codegen/src/main/kotlin/org/jetbrains/bsp/generators:codegen",
    visibility = ["//visibility:public"],
)

alias(
    name = "old-codegen",
    actual = "//old-scala-codegen:old-codegen",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4kt-generator",
    main_class = "org.jetbrains.bsp.generators.bsp4kt.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":codegen",
    ],
)

library_generator(
    name = "generate-bsp4kt",
    gen_tool = ":bsp4kt-generator",
    library_name = "bsp4kt",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4s-generator",
    main_class = "bsp.codegen.bsp4s.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":old-codegen",
    ],
)

library_generator(
    name = "generate-bsp4s",
    gen_tool = ":bsp4s-generator",
    library_name = "bsp4s",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4j-generator",
    main_class = "bsp.codegen.bsp4j.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":old-codegen",
    ],
)

library_generator(
    name = "generate-bsp4j",
    gen_tool = ":bsp4j-generator",
    library_name = "bsp4j",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4rs-generator",
    main_class = "org.jetbrains.bsp.generators.bsp4rs.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":codegen",
    ],
)

library_generator(
    name = "generate-bsp4rs",
    gen_tool = ":bsp4rs-generator",
    library_name = "bsp4rs",
    visibility = ["//visibility:public"],
)
