load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")
load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary")
load("@io_bazel_rules_scala//scala:scala_import.bzl", "scala_import")
load("@rules_multirun//:defs.bzl", "multirun")

load("//rules/generator:generator.bzl", "library_generator")
load("//rules/generator:website.bzl", "website")

multirun(
    name = "generate",
    commands = [
        "//:generate-bsp4kt_command",
        "//:generate-bsp4s_command",
        "//:generate-bsp4j_command",
        "//:generate-bsp4rs_command",
        "//:generate-website_command"
    ],
    jobs = 0,
)

filegroup(
    name = "docs",
    srcs = glob(["docs/**/*"]),
)

website(
    name = "generate-website",
    library_version = "2.1.0",
    data = [
        ":docs",
    ],
    jars = [
       "//bsp4j",
       "//old-scala-codegen",
       "//codegen:codegen.jar",
       "@maven//:org_eclipse_lsp4j_org_eclipse_lsp4j_jsonrpc",
       "@maven//:com_google_code_gson_gson",
       "@com_github_jetbrains_kotlin//:kotlin-stdlib",
       "@maven//:software_amazon_smithy_smithy_model",
       "@maven//:software_amazon_smithy_smithy_utils",
       "//spec-traits:spec-traits.jar",
       "@maven//:com_monovore_decline_2_13",
       "@maven//:org_typelevel_cats_core_2_13",
       "@maven//:org_typelevel_cats_kernel_2_13",

   ],
)

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@com_github_jetbrains_kotlin//:kotlinx-serialization-compiler-plugin",
    ],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    exported_compiler_plugins = [":serialization_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)

java_binary(
    name = "bsp4kt-generator",
    main_class = "org.jetbrains.bsp.generators.bsp4kt.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//codegen",
    ],
)

library_generator(
    name = "generate-bsp4kt",
    gen_tool = ":bsp4kt-generator",
    library_name = "bsp4kt",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4s-generator",
    main_class = "bsp.codegen.bsp4s.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//old-scala-codegen",
    ],
)

library_generator(
    name = "generate-bsp4s",
    gen_tool = ":bsp4s-generator",
    library_name = "bsp4s",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4j-generator",
    main_class = "bsp.codegen.bsp4j.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//old-scala-codegen",
    ],
)

library_generator(
    name = "generate-bsp4j",
    gen_tool = ":bsp4j-generator",
    library_name = "bsp4j",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bsp4rs-generator",
    main_class = "org.jetbrains.bsp.generators.bsp4rs.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//codegen",
    ],
)

library_generator(
    name = "generate-bsp4rs",
    gen_tool = ":bsp4rs-generator",
    library_name = "bsp4rs",
    visibility = ["//visibility:public"],
)
