[package]
name = "bsp4rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/org/jetbrains/bsp/bsp4rs/lib.rs"

[dependencies]
lsp-types = "0.94.1"
serde = "1.0.188"
serde_json = "1.0.106"
serde_repr = "0.1.16"
serde-enum-str = "0.4.0"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml", "json"] }
