[package]
name = "bsp4rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/org/jetbrains/bsp/bsp4rs/lib.rs"

[dependencies]
serde = { version = "1.0.34", features = ["derive"] }
serde_json = "1.0.106"
serde_repr = "0.1.16"
serde-enum-str = "0.4.0"

[dev-dependencies]
insta = { version = "1.31.0", features = ["yaml", "json"] }
