[package]
name = "bsp4rs"
version = "0.1.0"
edition = "2021"
description = "Types for interaction with a build server, using Build Server Protocol"
license = "MIT OR Apache-2.0"

[lib]
path = "src/org/jetbrains/bsp/bsp4rs/lib.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
serde-enum-str = "0.4.0"

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml", "json"] }
